# syzdescriptor

./: .gitignore  LICENSE  README.md  pyproject.toml  syzdescriptor.py
syzdescriptor/: __init__.py  cmd.py  driver.py  log.py  passes.py  postprocessor.py  syzlang.py
